testsuite/tests/parser/should_fail/readFail013.hs
module ReadFail013 where

-- !!! unterminated ``
a = ``s``
